welcome.lessons.welcome.array.search.IndexOfValue.scala.error
indexOfValue:2: error: not found: value tableau
  for (i<-0 to tableau.length-1){
               ^indexOfValue:4: error: type mismatch;
 found   : Boolean(true)
 required: Int
      return true
             ^indexOfValue:7: error: type mismatch;
 found   : Boolean(false)
 required: Int
  return false
         ^