welcome.lessons.welcome.array.search.IndexOfValue.scala.code
def indexOfValue(nums:Array[Int] ,lookingFor:Int): Int = {
  for (i<-0 to tableau.length-1){
    if (nums(i)==lookingFor){
      return true
    }
  }
  return false
}